web: fix horizontal scrolling on build page
concourse/concourse#5999

Trim any trailing white spaces and wrap text on full words.

--- a/web/assets/css/build.less
+++ b/web/assets/css/build.less
@@ -46,12 +46,16 @@
   }
 }
 
+.timestamped-logs {
+  white-space: pre-line;
+}
+
 .timestamped-line {
   display: flex;
   flex-direction: row;
 
   .timestamped-content {
-    word-break: break-all;
+    word-break: normal;
   }
 
   .timestamp {
